Fixed the build. Mvn plugins to enable preview and compiler to use latest ASM